[gd_scene load_steps=6 format=3 uid="uid://cyjc3tgbk2tce"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_35gyv"]
[ext_resource type="PackedScene" uid="uid://c3qtp2vepp5g1" path="res://scenes/enemy.tscn" id="2_0njv1"]
[ext_resource type="Texture2D" uid="uid://chsjw350n5qeb" path="res://assets/boss.png" id="3_40yr0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5esed"]
radius = 6.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sna1w"]
size = Vector2(14, 19)

[node name="Boss" type="CharacterBody2D" groups=["Boss", "Enemy", "Spawner"]]
collision_layer = 11
collision_mask = 11
script = ExtResource("1_35gyv")
enemyScene = ExtResource("2_0njv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_5esed")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
texture = ExtResource("3_40yr0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_sna1w")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="SpawnPoint2D1" type="Node2D" parent="."]
position = Vector2(-12, 0)

[node name="SpawnPoint2D2" type="Node2D" parent="."]
position = Vector2(12, 0)

[node name="SpawnPoint2D3" type="Node2D" parent="."]
position = Vector2(0, -12)

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
